Added new improved logo

--- a/module/Home/view/layout/layout.phtml
+++ b/module/Home/view/layout/layout.phtml
@@ -65,7 +65,7 @@
                             <div class="logo">
                                 <a href="index.html" title=
                                 "&larr; Back home"><img alt="La Boutique" src=
-                                "img/lena_clare_logo.jpg"></a>
+                                "img/LC-Name-Logo_Medium.jpg"></a>
                             </div>
                         </div>
 
